# DotNetWithCMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
CSharpLib/: CMakeLists.txt  CSharpClass.cs
CommonLib/: CMakeLists.txt  Common.cs
CppCliLib/: CMakeLists.txt
WinFormsApp/: CMakeLists.txt  Program.cs
WinFormsApp/Properties/: Resources.Designer.cs  Settings.Designer.cs
WpfApp/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  app.config
WpfApp/Properties/: AssemblyInfo.cs.template
src/: AssemblyInfo.cpp.template
src/CSharpLib/: CMakeLists.txt  CSharpClass.cs
src/CommonLib/: CMakeLists.txt  Common.cs
src/CppCliLib/: CMakeLists.txt  CppClass.cpp  CppClass.h
src/NuGetExample/: CMakeLists.txt  Logger.cs
src/UnmanagedLib/: CMakeLists.txt
src/UnmanagedLib/include/: UnmanagedClass.h
src/UnmanagedLib/src/: UnmanagedClass.cpp
src/WinFormsApp/: CMakeLists.txt  Program.cs
src/WinFormsApp/Properties/: AssemblyInfo.cs.template  Settings.Designer.cs
src/WpfApp/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
src/WpfApp/Properties/: Resources.Designer.cs
